<resources>
    <string name="app_name">Ashcol</string>
    <string-array name="service_types">
        <item>Select a service type...</item>
        <item>Plumbing</item>
        <item>Electrical</item>
        <item>HVAC</item>
        <item>Appliance Repair</item>
    </string-array>
    <string-array name="branch_options">
        <item>Select branch...</item>
        <item>ASHCOL TAGUIG</item>
        <item>ASHCOL Valenzuela</item>
        <item>ASHCOL Rodriguez Rizal</item>
        <item>ASHCOL PAMPANGA</item>
        <item>ASHCOL Bulacan</item>
        <item>ASHCOL GENTRI CAVITE</item>
        <item>ASHCOL DASMARINAS CAVITE</item>
        <item>ASHCOL STA ROSA – TAGAYTAY RD</item>
        <item>ASHCOL LAGUNA</item>
        <item>ASHCOL BATANGAS</item>
        <item>ASHCOL CANDELARIA QUEZON PROVINCE</item>
    </string-array>
    <string name="chatbot_button_description">Chatbot</string>
    <string name="keeping_you_cool">Keeping you cool</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="ashcol_corporation_logo">Ashcol Corporation Logo</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="registering">Registering...</string>
    <string name="register">Register</string>
    <string name="logging_in">Logging in...</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_password">Change Password</string>
    <string name="sign_up_subtitle">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_button">Continue</string>
    <string name="back_to_login">Back to Login</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_a_service">Choose a Service</string>
    <string name="repair">Repair</string>
    <string name="cleaning">Cleaning</string>
    <string name="installation">Installation</string>
    <string name="maintenance">Maintenance</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="we_just_need_a_few_details_to_get_started">We just need a few details to get started.</string>
    <string name="fullname">Fullname</string>
    <string name="email_signup">Email</string>
    <string name="last_name_signup">Last name</string>
    <string name="first_name_signup">First name</string>
    <string name="by_using_ashcol_you_agree_to_the_terms_and_privacy_policy">By using Ashcol, you agree to the Terms and Privacy Policy.</string>
    <string name="continue_signup">continue</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="sign_up_and_start_your_journey_with_nthe_ashcol_family">Sign up and start your journey with\nthe Ashcol family.</string>
    <string name="hey_there">Hey there!</string>
    <string name="create_new_account">Create new account</string>
    <string name="your_account_was_successfully_created">Your account was successfully created!</string>
    <string name="home">home</string>
    <string name="profile_title">Profile</string>
    <string name="profile_preferences">Preferences</string>
    <string name="profile_appearance">Appearance</string>
    <string name="profile_notifications">Notifications</string>
    <string name="profile_language">Language</string>
    <string name="profile_general">General</string>
    <string name="profile_personal_info">Personal Information</string>
    <string name="profile_password_privacy">Password &amp; Privacy</string>
    <string name="profile_payroll">Payroll</string>
    <string name="profile_help_feedback">Help and feedback</string>
    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_default_name">Yoox</string>
    <string name="profile_default_username">yooxieboy123</string>
    <string name="loading">Loading...</string>
    <string name="desc_profile_picture">Profile Picture</string>
    <string name="desc_edit_photo">Edit Photo</string>
    <string name="desc_appearance_icon">Appearance Icon</string>
    <string name="desc_notifications_icon">Notifications Icon</string>
    <string name="desc_language_icon">Language Icon</string>
    <string name="desc_personal_info_icon">Personal Info Icon</string>
    <string name="desc_privacy_icon">Privacy Icon</string>
    <string name="desc_payroll_icon">Payroll Icon</string>
    <string name="desc_help_icon">Help Icon</string>
    <string name="desc_sign_out_icon">Sign Out Icon</string>
    <string name="btnback">btnBack</string>
    <string name="footer_terms">By using Ashcol, you agree to the\n<b>Terms</b> and <b>Privacy Policy</b>.</string>
    <string name="service_request_form">Service Request Form</string>
    <string name="btnclose">btnClose</string>
    <string name="btn_close_desc">Close form</string>
    <string name="date_label">Date</string>
    <string name="status_label">Status</string>
    <string name="new_requests">New Requests</string>
    <string name="customer_info">Customer Information</string>
    <string name="fullname_label">Fullname</string>
    <string name="ticket_id_label">Ticket ID</string>
    <string name="contact_label">Contact Number</string>
    <string name="address_label">Address</string>
    <string name="service_details">Service Details</string>
    <string name="service_type_label">Service Type</string>
    <string name="pref_date_label">Preferred Date &amp; Time</string>
    <string name="branch_label">Branch</string>
    <string name="assign_to_label">Assign To</string>
    <string name="expected_completion_label">Expected Completion Date</string>
    <string name="priority_level_label">Priority Level</string>
    <string name="description_label">Description of Requests</string>
    <string name="attachments_label">Attachments</string>
    <string name="accept">Accept</string>
    <string name="hint_date">01-04-2026</string>
    <string name="hint_name">Usher dizon</string>
    <string name="hint_auto_gen">Auto Generated</string>
    <string name="hint_address">112 Strawberry St., City of Bacoor</string>
    <string name="hint_pref_date">January 15, 2026 - 10 AM</string>
    <string name="hint_comp_date">January 15, 2026 - 3PM</string>
    <string name="hint_desc">My AC needs...</string>
    <string name="hint_attach">Attach photos or upload file</string>
    <string name="desc_header_bg">Header Background</string>
    <string name="desc_app_logo">App Logo</string>
    <string name="search_hint">Search any Services...</string>
    <string name="service_cleaning">Cleaning</string>
    <string name="service_repair">Repair</string>
    <string name="service_installation">Installation</string>
    <string name="service_maintenance">Maintenance</string>
    <string name="quick_services">Quick Services</string>
    <string name="workload_status">Workload Status</string>
    <string name="workload_subtitle">Overview of service activity</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="see_more">See more</string>
    <string name="employee_overview">Technician Overview</string>
    <string name="employee_overview_subtitle">Technician performance and statistics</string>
    <string name="key_metrics">Key Metrics</string>
    <string name="chart_month">December 2025</string>
    <string name="chart_percentage">75%</string>
    <string name="legend_total_emp">Total Technicians</string>
    <string name="legend_on_duty">On Duty</string>
    <string name="legend_new">New This Month</string>
    <string name="legend_on_leave">On Leave</string>
    <string name="title_payment">Payment</string>
    <string name="action_history">History</string>
    <string name="title_add_payment">Add payment method</string>
    <string name="nav_back">Go back</string>
    <string name="nav_arrow">Arrow right</string>
    <string name="method_maya">Maya Wallet</string>
    <string name="desc_maya">PayMaya</string>
    <string name="method_gotyme">GOtyme Wallet</string>
    <string name="desc_gotyme">GOtyme bank</string>
    <string name="method_union">Union Bank</string>
    <string name="desc_union">direct debit</string>
    <string name="icon_wallet_desc">Wallet Icon</string>
    <string name="title_work_status">Work Status Report</string>
    <string name="legend_today">Today</string>
    <string name="legend_this_week">This week</string>
    <string name="legend_this_month">This month</string>
    <string name="legend_last_month">Last month</string>
    <string name="desc_logo" />
    <string name="notifications_title">Notifications</string>
    <string name="label_push_notification">Push Notification</string>
    <string name="label_email_notification">Email Notification</string>
    <string name="label_sms_notification">SMS Notification</string>
    <string name="employee_today_job">Todays Job</string>
    <string name="employee_status_ongoing">ONGOING</string>
    <string name="employee_action_navigate">Navigate</string>
    <string name="employee_action_call">Call</string>
    <string name="employee_action_details">Details</string>
    <string name="title_about_us">About us</string>
    <string name="label_company_name">Company name</string>
    <string name="text_company_name">ASCHOL AIRCONDITIONING SERVICES CORPORATION</string>
    <string name="text_address">Units 4D, 4E and 4F Genesis Building 182-A 19th Avenue Brgy East Rembo Makati City 1216.</string>
    <string name="label_customer_hotline">Customer Hotline</string>
    <string name="text_hotline">+63 (2) 77291293</string>
    <string name="label_service_dept">Service / Technical Department</string>
    <string name="text_service_dept">+63 (2) 77541418</string>
    <string name="label_mobile">Mobile Numbers</string>
    <string name="text_mobile_globe">+63 (917) 7143810 (Globe)</string>
    <string name="text_mobile_smart">+63 (908) 8950849 (Smart)</string>
    <string name="label_email">Email</string>
    <string name="text_email">headoffice@ashcol.com.ph</string>
    <string name="label_website">Website</string>
    <string name="text_website">ashcol.com.ph</string>
    <string name="desc_back">Go back</string>
    <string name="manager_ticket_layout_error">Layout error - missing views</string>
    <string name="language_title">Language</string>
    <string name="lang_cebuano">Cebuano (Bisaya)</string>
    <string name="lang_filipino">Filipino (Tagalog)</string>
    <string name="lang_english_us">English (US)</string>
    <string name="lang_english_uk">English (UK)</string>
    <string name="label_address">Address</string>
</resources>